fixes #67. find a solution to prevent page jumps

--- a/themes/lazy/static/css/lazy.css
+++ b/themes/lazy/static/css/lazy.css
@@ -843,3 +843,35 @@ main,
     margin-bottom: 5rem;
   }
 }
+
+.lazy-wrapper.ratio {
+  width: 100%;
+  height: 0;
+  position: relative;
+}
+
+.lazy-wrapper.ratio .lazy {
+  position: absolute !important;
+  width: 100%;
+  top: 0;
+}
+
+.ratio-16-9 {
+  padding-top: 56.25%;
+}
+
+.ratio-16-10 {
+  padding-top: 62.25%;
+}
+
+.ratio-3-2 {
+  padding-top: 66.67%;
+}
+
+.ratio-4-3 {
+  padding-top: 75%;
+}
+
+.ratio-1-1 {
+  padding-top: 100%;
+}
